--- a/fullstack-prototype-Rebusora/index.html
+++ b/fullstack-prototype-Rebusora/index.html
@@ -2,49 +2,131 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full-Stack App (Student Build)</title>
-    <!-- Bootstrap 5 CSS CDN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+
+    <style>
+        #registerForm, #loginForm {
+            background: #f8f9fa;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        #successMessage {
+            display: none;
+        }
+    </style>
 </head>
+
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <!-- Brand / App Name -->
-            <span class="navbar-brand mb-0 h1">Full-Stack App (Rebusora,John Anthony)</span>
 
-            <!-- Right-side links -->
-            <div>
-                <a href="login.html" class="nav-link d-inline me-3">Login</a>
-                <a href="register.html" class="nav-link d-inline">Register</a>
-            </div>
+<!-- NAVBAR -->
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">
+            Full-Stack App (Rebusora, John Anthony)
+        </span>
+
+        <div>
+            <a href="#" class="nav-link d-inline text-white me-3" onclick="showHome()">Home</a>
+            <a href="#" class="nav-link d-inline text-white me-3" onclick="showRegister()">Register</a>
+            <a href="#" class="nav-link d-inline text-white" onclick="showLogin()">Login</a>
         </div>
-    </nav>
+    </div>
+</nav>
 
+<!-- ================= HOME ================= -->
+<div id="homeSection">
+    <div class="container mt-5 text-center">
+        <h1>Welcome to Full-Stack App</h1>
+        <p class="lead">A static prototype before backend integration.</p>
+
+        <ul class="list-unstyled">
+            <li>Email registration + verification simulation</li>
+            <li>Login with LocalStorage</li>
+            <li>Role-based UI (Admin/User)</li>
+            <li>CRUD simulation</li>
+        </ul>
+
+        <div class="alert alert-info">
+            ⚠ All data stored in <code>localStorage</code>. Refresh to reset.
+        </div>
+    </div>
+</div>
+
+<!-- ================= REGISTER ================= -->
+<div id="registerSection" style="display:none;">
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8">
-                <h1 class="mb-4">Welcome to Full-Stack App</h1>
-                <p class="lead">A static prototype before backend integration. Simulates:</p>
-                <ul class="mb-4">
-                    <li>Email registration + fake verification</li>
-                    <li>Login with JWT-like token simulation</li>
-                    <li>Role-based UI (Admin/User)</li>
-                    <li>CRUD for Employees, Departments, Requests</li>
-                </ul>
-                <div class="alert alert-info" role="alert">
-                    <strong>⚠ Note:</strong> All data is stored in <code>localStorage</code>. Refresh to reset.
+            <div class="col-md-6">
+                <h2 class="mb-4">Register Account</h2>
+
+                <form id="registerForm">
+                    <div class="mb-3">
+                        <label>First Name</label>
+                        <input type="text" id="firstName" class="form-control" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label>Last Name</label>
+                        <input type="text" id="lastName" class="form-control" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label>Email</label>
+                        <input type="email" id="email" class="form-control" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label>Password</label>
+                        <input type="password" id="password" class="form-control" required>
+                    </div>
+
+                    <button type="submit" class="btn btn-success">Sign Up</button>
+                </form>
+
+                <div id="successMessage" class="alert alert-success mt-3">
+                    Account registered successfully!
                 </div>
-                <a href="#" class="btn btn-primary btn-lg">Get Started →</a>
             </div>
         </div>
     </div>
-    
-    <!-- Bootstrap JS Bundle CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom Script -->
-    <script src="script.js"></script>
+</div>
+
+<!-- ================= LOGIN ================= -->
+<div id="loginSection" style="display:none;">
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h2 class="mb-4">Login</h2>
+
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label>Email</label>
+                        <input type="email" id="loginEmail" class="form-control" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label>Password</label>
+                        <input type="password" id="loginPassword" class="form-control" required>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- External JS -->
+<script src="script.js"></script>
+
 </body>
 </html>
