--- a/fullstack-prototype-Rebusora/index.html
+++ b/fullstack-prototype-Rebusora/index.html
@@ -5,30 +5,34 @@
     <title>Full-Stack App (Student Build)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-     
+    <link rel="stylesheet" href="style.css">
 </head>
-
-<body>
-
-<!-- NAVBAR -->
+<body class="not-authenticated">
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">
+        <span class="navbar-brand mb-0 h1 brand-text">
             Full-Stack App (Rebusora, John Anthony)
         </span>
 
-        <div>
-            <a href="#" class="nav-link d-inline text-white me-3" onclick="showHome()">Home</a>
-            <a href="#" class="nav-link d-inline text-white me-3" onclick="showRegister()">Register</a>
-            <a href="#" class="nav-link d-inline text-white" onclick="showLogin()">Login</a>
+        <div class="d-flex flex-wrap align-items-center nav-zones">
+            <a href="#/home" class="nav-link role-public d-inline text-white me-3">Home</a>
+            <a href="#/register" class="nav-link role-public d-inline text-white me-3">Register</a>
+            <a href="#/login" class="nav-link role-public d-inline text-white me-3">Login</a>
+
+            <a href="#/profile" class="nav-link role-logged-in d-inline text-white me-3">Profile</a>
+            <a href="#/requests" class="nav-link role-logged-in d-inline text-white me-3">My Requests</a>
+
+            <a href="#/employees" class="nav-link role-logged-in role-admin d-inline text-white me-3">Employees</a>
+            <a href="#/accounts" class="nav-link role-logged-in role-admin d-inline text-white me-3">Accounts</a>
+            <a href="#/departments" class="nav-link role-logged-in role-admin d-inline text-white me-3">Departments</a>
+
+            <a href="#" id="logoutLink" class="nav-link role-logged-in d-inline text-white">Logout</a>
         </div>
     </div>
 </nav>
 
-<!-- ================= HOME ================= -->
-<div id="homeSection">
+<section id="homeSection" class="page active">
     <div class="container mt-5 text-center">
         <h1>Welcome to Full-Stack App</h1>
         <p class="lead">A static prototype before backend integration.</p>
@@ -41,13 +45,12 @@
         </ul>
 
         <div class="alert alert-info">
-            ⚠ All data stored in <code>localStorage</code>. Refresh to reset.
+            All data is stored in <code>localStorage</code>.
         </div>
     </div>
-</div>
+</section>
 
-<!-- ================= REGISTER ================= -->
-<div id="registerSection" style="display:none;">
+<section id="registerSection" class="page">
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -78,15 +81,19 @@
                 </form>
 
                 <div id="successMessage" class="alert alert-success mt-3">
-                    Account registered successfully!
+                    Account registered successfully.
+                </div>
+
+                <div id="verifyInlineBox" class="alert alert-warning mt-3">
+                    <p id="verifyEmailMessage" class="mb-2">No pending verification.</p>
+                    <button id="simulateVerifyBtn" type="button" class="btn btn-warning btn-sm">Simulate Verification</button>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 
-<!-- ================= LOGIN ================= -->
-<div id="loginSection" style="display:none;">
+<section id="loginSection" class="page">
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -108,13 +115,276 @@
             </div>
         </div>
     </div>
+</section>
+
+<section id="profileSection" class="page">
+    <div class="container mt-5">
+        <div class="panel-box">
+            <h2>Profile</h2>
+            <p id="profileMessage">No active user.</p>
+        </div>
+    </div>
+</section>
+
+<section id="requestsSection" class="page">
+    <div class="container mt-5">
+        <div class="panel-box">
+            <h2>My Requests</h2>
+            <p>Only your own request history is shown.</p>
+            <button
+                type="button"
+                class="btn btn-primary mb-3"
+                data-bs-toggle="modal"
+                data-bs-target="#newRequestModal"
+                id="openRequestModalBtn"
+            >
+                New Request
+            </button>
+
+            <div class="table-responsive">
+                <table class="table table-sm table-striped mb-0">
+                    <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Type</th>
+                        <th>Items</th>
+                        <th>Status</th>
+                    </tr>
+                    </thead>
+                    <tbody id="requestsTableBody"></tbody>
+                </table>
+            </div>
+
+            <div class="role-admin mt-4">
+                <h5>All Requests (Admin)</h5>
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped mb-0">
+                        <thead>
+                        <tr>
+                            <th>Requested By</th>
+                            <th>Date</th>
+                            <th>Type</th>
+                            <th>Items</th>
+                            <th>Status</th>
+                            <th>Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody id="adminRequestsTableBody"></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="modal fade" id="newRequestModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">New Request</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="requestForm">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="requestType" class="form-label">Type</label>
+                        <select id="requestType" class="form-select" required>
+                            <option value="Equipment">Equipment</option>
+                            <option value="Leave">Leave</option>
+                        </select>
+                    </div>
+
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <strong>Items</strong>
+                        <button type="button" class="btn btn-sm btn-outline-secondary" id="addRequestItemBtn">Add Item</button>
+                    </div>
+                    <div id="requestItemsContainer"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Submit Request</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
-<!-- Bootstrap JS -->
+<section id="employeesSection" class="page">
+    <div class="container mt-5">
+        <div class="panel-box">
+            <h2>Employees</h2>
+            <p>Link a user account to a department and position.</p>
+
+            <div class="d-flex justify-content-end mb-3">
+                <button type="button" class="btn btn-success btn-sm" id="addEmployeeBtn">+ Add Employee</button>
+            </div>
+
+            <div class="table-responsive mb-3">
+                <table class="table table-sm table-striped mb-0">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Position</th>
+                        <th>Dept</th>
+                        <th>Hire Date</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="employeesTableBody"></tbody>
+                </table>
+            </div>
+
+            <div class="border rounded p-3">
+                <h6>Add/Edit Employee</h6>
+                <form id="employeeForm" class="row g-2 mb-0">
+                    <input type="hidden" id="employeeEditId">
+                    <div class="col-md-6">
+                        <label for="employeeIdInput" class="form-label">Employee ID</label>
+                        <input id="employeeIdInput" class="form-control" type="text" placeholder="Auto-generated" readonly>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="employeeUserEmailInput" class="form-label">User Email</label>
+                        <input id="employeeUserEmailInput" class="form-control" type="email" list="employeeUserEmailOptions" required>
+                        <datalist id="employeeUserEmailOptions"></datalist>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="employeePositionInput" class="form-label">Position</label>
+                        <input id="employeePositionInput" class="form-control" type="text" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="employeeDepartmentSelect" class="form-label">Department</label>
+                        <select id="employeeDepartmentSelect" class="form-select" required></select>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="employeeHireDateInput" class="form-label">Hire Date</label>
+                        <input id="employeeHireDateInput" class="form-control" type="date" required>
+                    </div>
+                    <div class="col-12 d-flex gap-2">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="button" id="cancelEmployeeEditBtn" class="btn btn-secondary">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="accountsSection" class="page">
+    <div class="container mt-5">
+        <div class="panel-box">
+            <h2>Accounts</h2>
+            <p>View users, reset passwords, and delete users.</p>
+
+            <div class="d-flex justify-content-end mb-3">
+                <button type="button" class="btn btn-success btn-sm" id="addAccountBtn">+ Add Account</button>
+            </div>
+
+            <div class="table-responsive mb-3">
+                <table class="table table-sm table-striped mb-0">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th>Verified</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="accountsTableBody"></tbody>
+                </table>
+            </div>
+
+            <div class="border rounded p-3">
+                <h6>Add/Edit Account</h6>
+                <form id="accountForm" class="row g-2 mb-0">
+                    <input type="hidden" id="accountEditEmail">
+                    <div class="col-md-6">
+                        <label for="accountFirstNameInput" class="form-label">First Name</label>
+                        <input id="accountFirstNameInput" class="form-control" type="text" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="accountLastNameInput" class="form-label">Last Name</label>
+                        <input id="accountLastNameInput" class="form-control" type="text" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="accountEmailInput" class="form-label">Email</label>
+                        <input id="accountEmailInput" class="form-control" type="email" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="accountPasswordInput" class="form-label">Password</label>
+                        <input id="accountPasswordInput" class="form-control" type="password" placeholder="Required for new account">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="accountRoleSelect" class="form-label">Role</label>
+                        <select id="accountRoleSelect" class="form-select" required>
+                            <option value="user">User</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6 d-flex align-items-end">
+                        <div class="form-check mb-2">
+                            <input class="form-check-input" type="checkbox" id="accountVerifiedCheck">
+                            <label class="form-check-label" for="accountVerifiedCheck">Verified</label>
+                        </div>
+                    </div>
+                    <div class="col-12 d-flex gap-2">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="button" id="cancelAccountEditBtn" class="btn btn-secondary">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="departmentsSection" class="page">
+    <div class="container mt-5">
+        <div class="panel-box">
+            <h2>Departments</h2>
+            <p>Maintain a list of active teams.</p>
+
+            <div class="d-flex justify-content-end mb-3">
+                <button type="button" class="btn btn-success btn-sm" id="addDepartmentBtn">+ Add Department</button>
+            </div>
+
+            <div class="table-responsive mb-3">
+                <table class="table table-sm table-striped mb-0">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="departmentsTableBody"></tbody>
+                </table>
+            </div>
+
+            <div class="border rounded p-3">
+                <h6>Add/Edit Department</h6>
+                <form id="departmentForm" class="row g-2 mb-0">
+                    <input type="hidden" id="departmentEditId">
+                    <div class="col-md-6">
+                        <label for="departmentNameInput" class="form-label">Name</label>
+                        <input id="departmentNameInput" class="form-control" type="text" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="departmentDescriptionInput" class="form-label">Description</label>
+                        <input id="departmentDescriptionInput" class="form-control" type="text" required>
+                    </div>
+                    <div class="col-12 d-flex gap-2">
+                        <button class="btn btn-primary" type="submit">Save</button>
+                        <button class="btn btn-secondary" type="button" id="cancelDepartmentEditBtn">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- External JS -->
+<div class="toast-container position-fixed top-0 end-0 p-3" id="appToastContainer"></div>
 <script src="script.js"></script>
-
 </body>
 </html>
