feat: complete admin/user prototype flows, add docs comments, and improve employee handling
- add working Profile edit flow (replace placeholder alert)
- make Add Department button functional (reset/focus form with toast)
- keep admin-only rendering guarded after profile updates
- sync related employee/request records when account email changes
- restore clear Accounts verified display (Yes/No)
- add seeded admin account: admin@app.local (with startup/migration seeding)
- ensure all seeded admins are re-inserted if missing from storage
- add function-level comments and section headers across script.js for readability
- refactor for clarity without changing required behavior/flow
- auto-generate Employee ID from existing data (next sequential value)
- initialize employee form ID on admin view render to avoid blocked submit
- keep edit mode behavior intact for employee updates

chore: preserve existing teacher-required syntax/flow while improving maintainability

--- a/fullstack-prototype-Rebusora/index.html
+++ b/fullstack-prototype-Rebusora/index.html
@@ -241,7 +241,7 @@
                     <input type="hidden" id="employeeEditId">
                     <div class="col-md-6">
                         <label for="employeeIdInput" class="form-label">Employee ID</label>
-                        <input id="employeeIdInput" class="form-control" type="text" placeholder="Auto-generated" readonly>
+                        <input id="employeeIdInput" class="form-control" type="text" placeholder="e.g. EMP-001" required>
                     </div>
                     <div class="col-md-6">
                         <label for="employeeUserEmailInput" class="form-label">User Email</label>
