--- a/fullstack-prototype-Rebusora/index.html
+++ b/fullstack-prototype-Rebusora/index.html
@@ -168,6 +168,20 @@
                 New Request
             </button>
 
+            <div class="table-responsive">
+                <table class="table table-sm table-striped mb-0">
+                    <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Type</th>
+                        <th>Details</th>
+                        <th>Status</th>
+                    </tr>
+                    </thead>
+                    <tbody id="requestsTableBody"></tbody>
+                </table>
+            </div>
+
             <div class="role-admin mt-4">
                 <h5>All Requests (Admin)</h5>
                 <div class="table-responsive">
